--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-http": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-      "ext-http": "*"
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
