--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-http": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
